--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,34 @@
-asgiref==3.5.0
+asgiref==3.4.0
 attrs==21.4.0
+Bottleneck==1.3.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.1.2
+click==8.0.4
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.4
 Django==3.2.12
-Fiona @ file:///D:/ALL_data_science/GeoSpatial/geopandas_dep_py3.7/Fiona-1.8.21-cp37-cp37m-win_amd64.whl
-GDAL @ file:///D:/ALL_data_science/GeoSpatial/geopandas_dep_py3.7/GDAL-3.4.2-cp37-cp37m-win_amd64.whl
-geopandas==0.10.2
 idna==3.3
-importlib-metadata==4.11.3
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186163140/work
-mkl-service==2.4.0
+importlib-metadata==4.8.3
+mkl-fft==1.0.6
+mkl-random==1.0.1.1
+
 munch==2.5.0
-numexpr @ file:///C:/ci/numexpr_1640704420125/work
-numpy @ file:///C:/ci_310/numpy_and_numpy_base_1643798589088/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1635506714241/work
+numexpr==2.8.1
+numpy==1.19.5
+packaging==21.3
+pandas==1.1.5
+pip==21.2.4
 psycopg2==2.9.3
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyproj @ file:///D:/ALL_data_science/GeoSpatial/geopandas_dep_py3.7/pyproj-3.2.1-cp37-cp37m-win_amd64.whl
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pyparsing==3.0.4
+python-dateutil==2.8.2
 pytz==2021.3
 requests==2.27.1
-Rtree @ file:///D:/ALL_data_science/GeoSpatial/geopandas_dep_py3.7/Rtree-0.9.7-cp37-cp37m-win_amd64.whl
-Shapely @ file:///D:/ALL_data_science/GeoSpatial/geopandas_dep_py3.7/Shapely-1.8.1.post1-cp37-cp37m-win_amd64.whl
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==58.0.4
+six==1.16.0
 sqlparse==0.4.2
 typing_extensions==4.1.1
 urllib3==1.26.9
+wheel==0.37.1
 wincertstore==0.2
-zipp==3.8.0
+zipp==3.6.0
